# airlock

./: .flake8  .gitignore  .pre-commit-hooks.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
.github/workflows/: docs.yml  tests.yml
airlock/: __init__.py  flake8_plugin.py  lint.py
airlock/integrations/: __init__.py  celery.py  django.py
airlock/integrations/django/: __init__.py  apps.py
airlock/integrations/executors/: __init__.py  celery.py  django_q.py  django_tasks.py  dramatiq.py  huey.py  sync.py
alternatives/: index.html
api/: index.html
api/celery/: index.html
api/core/: index.html
api/django/: index.html
api/executors/: index.html
api/intent/: index.html
api/policies/: index.html
api/scope-class/: index.html
celery/: index.html
celery/migration/: index.html
celery/task-wrapper/: index.html
django/: index.html
docs/: alternatives.md  getting-started.md  index.md  testing.md
docs/api/: celery.md  core.md  django.md  executors.md  index.md  intent.md  policies.md  scope-class.md
docs/celery/: index.md  migration.md  task-wrapper.md
docs/concepts/: how-it-works.md  introspection.md  nested-scopes.md  policies.md  problem.md
docs/dispatch/: executors.md  how-it-works.md  options.md
docs/django/: index.md
docs/extending/: custom-executors.md  custom-policies.md  custom-scopes.md
docs/getting-started/: installation.md  quick-start.md  when-not-needed.md
docs/guide/: basic-usage.md  dispatch.md  nested-scopes.md  policies.md
docs/integrations/celery/: task-wrapper.md
docs/migration/: from-direct-delay.md  selective-vs-blanket.md
docs/quickstart/: celery.md  django.md  raw-python.md
docs/understanding/: alternatives.md  core-model.md  design-invariants.md  how-it-composes.md  nesting.md  the-problem.md
extending/custom-executors/: index.html
extending/custom-policies/: index.html
extending/custom-scopes/: index.html
getting-started/: index.html
guide/basic-usage/: index.html
guide/dispatch/: index.html
guide/nested-scopes/: index.html
guide/policies/: index.html
integrations/celery/task-wrapper/: index.html
migration/from-direct-delay/: index.html
migration/selective-vs-blanket/: index.html
quickstart/celery/: index.html
quickstart/django/: index.html
quickstart/raw-python/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/alternatives/: index.html
site/api/core/: index.html
site/api/intent/: index.html
site/api/policies/: index.html
site/api/scope-class/: index.html
site/extending/custom-executors/: index.html
site/extending/custom-policies/: index.html
site/extending/custom-scopes/: index.html
site/guide/basic-usage/: index.html
site/guide/dispatch/: index.html
site/guide/nested-scopes/: index.html
site/guide/policies/: index.html
site/integrations/celery/task-wrapper/: index.html
site/migration/from-direct-delay/: index.html
site/migration/selective-vs-blanket/: index.html
site/quickstart/celery/: index.html
site/quickstart/django/: index.html
site/quickstart/raw-python/: index.html
site/search/: search_index.json
site/understanding/core-model/: index.html
site/understanding/how-it-composes/: index.html
site/understanding/the-problem/: index.html
testing/: index.html
tests/: test_asyncio_concurrency.py  test_celery_integration.py  test_configure.py  test_context.py  test_core.py  test_django_integration.py  test_executors.py  test_flake8_plugin.py  test_greenlet_concurrency.py  test_intent.py  test_lint.py  test_local_policy.py  test_policies.py  test_scope.py
tests/executors/: test_celery.py  test_django_q.py  test_django_tasks.py  test_dramatiq.py  test_huey.py  test_sync.py
understanding/alternatives/: index.html
understanding/core-model/: index.html
understanding/design-invariants/: index.html
understanding/how-it-composes/: index.html
understanding/nesting/: index.html
understanding/the-problem/: index.html
