[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airlock-py"
version = "0.1.0a3"
description = "Explicit, lifecycle-scoped control of side effects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Celery",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["side-effects", "celery", "tasks", "lifecycle", "outbox", "airlock"]

[project.urls]
Homepage = "https://github.com/ejucovy/airlock"
Documentation = "https://ejucovy.github.io/airlock/"
Repository = "https://github.com/ejucovy/airlock"
Issues = "https://github.com/ejucovy/airlock/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
]
test = [
    "django>=4.0",
    "celery>=5.0",
    "huey>=2.0",
    "dramatiq>=1.0",
    "django-q2>=1.0",
    "gevent>=21.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[tool.setuptools.packages.find]
include = ["airlock*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["airlock"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
